fix: center aligned navbar items and removed padding stopping ends of navbar reaching the edge of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,10 @@ p {
     font-family: 'Open Sans', sans-serif;
 }
 
+.container-fluid {
+    padding: 0;
+}
+
 /*---Menu/Logo*/
 
 .header {
@@ -88,6 +92,7 @@ p {
     border-bottom: 4px solid #660000;
     padding: 0;
     max-width: 100%;
+    justify-content: space-around;
 }
 
 @media (max-width: 992px) {
